jpackage fix